--- a/Pages/Blog.razor
+++ b/Pages/Blog.razor
@@ -23,6 +23,7 @@
 @foreach(BlogEntry entry in blog) {
     <li>
         <h3>@entry.Title</h3>
+        <button @onclick="() => Delete(entry)">Delete</button>
         <div class="blog-date">@entry.Time.ToShortDateString()</div>
         <p>@((MarkupString)entry.Content)</p>
     </li>
@@ -46,6 +47,14 @@
         } *@
         
         blog.AddRange(await ctx.Entries.OrderByDescending(e => e.Time).ToListAsync());
+    }
+
+    private async Task Delete(BlogEntry entry) {
+        using (var ctx = ContextFactory.CreateDbContext()) {
+            ctx.Entries.Remove(entry);
+            await ctx.SaveChangesAsync();
+        }
+        blog.Remove(entry);
     }
 
     private async void AddEntry() {
